welcome.lessons.welcome.bat.bool1.Max1020.scala.error
max1020:3: error: not found: value max
    return max(a,b)
           ^